<resources>
    <string name="app_name">EducationalGameV1</string>
    <string-array name="subjects">
        <item>Basic Computer</item>
        <item>Math</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="authorize">Authorize</string>
    <string name="unknown">unknown?</string>
    <string name="working">working...</string>
    <string name="back_button_icon_description">back button icon</string>
    <string name="subject_placeholder">Subject Name here</string>
    <string name="timer_icon_description">timer icon</string>
    <string name="question_count_placeholder">1/10</string>
    <string name="question_placeholder">Question here</string>
    <string name="ans1_placeholder">Ans1</string>
    <string name="ans2_placeholder">Ans2</string>
    <string name="ans3_placeholder">Ans3</string>
    <string name="ans4_placeholder">Ans4</string>
    <string name="next_button_text_placeholder">next</string>
    <string name="score_board_placeholder">Score board</string>
    <string name="high_score_icon_description">High Score Icon</string>
    <string name="user_name_column_text">User name</string>
    <string name="subject_column_text">subject</string>
    <string name="score_column_text">score</string>
    <string name="seconds_question_column_text">seconds/question</string>
    <string name="quiz_app_icon_text">Quiz App Icon</string>
    <string name="choose_a_subject">choose a subject</string>
    <string name="basic_computer_icon">Basic Computer Icon</string>
    <string name="basic_computer_string">Basic Computer</string>
    <string name="math_icon_description">Math icon</string>
    <string name="math_string">Math</string>
    <string name="score_board_button_text">Score Board</string>
    <string name="setting_button_text">Setting</string>
    <string name="setting_string">Setting</string>
    <string name="setting_icon_description">Setting Icon</string>
    <string name="user_name_placeholder">User name: Michael Jackson</string>
    <string name="dark_mode_switch_text">Dark Mode</string>
    <string name="enable_sound_effect_switch_text">Enable Sound Effect</string>
    <string name="shake_to_start_restart_quiz_switch_text">Shake to start/restart quiz</string>
    <string name="shuffle_questions_switch_text">Shuffle questions</string>
    <string name="number_of_questions_seekbar_text_placeholder">Number of questions: 10</string>
    <string name="seconds_per_question_text_placeholder">Seconds per question: 10</string>
    <string name="save_button_text">Save</string>
    <string name="twitter_sharing">Twitter Sharing</string>
    <string name="app_hashtag_on_twitter">#EducationalGameCommunity</string>
    <string name="twitter_logo_description">Twitter logo</string>
    <string name="see_other_results_button_text">See other results</string>
    <string name="congratulation_image_description">Congratulation meme</string>
    <string name="your_name_placeholder">Your name:</string>
    <string name="your_score_placeholder">Your Score:</string>
    <string name="time_placeholder">time:</string>
    <string name="back_to_home_page_button_text">Back to home page</string>
    <string name="retake_the_quiz_button_text">retake the quiz</string>
    <string name="share_result_on_twitter_button_text">Share result on twitter</string>
    <string name="start_button_text">start</string>
    <string name="stop_button_text">stop</string>
    <string name="reset_button_text">reset</string>
</resources>