<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowQuizResultActivity"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/like_image"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/congratulation_image_description" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            >
            <TextView
                android:id="@+id/result_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/setting_row"
                android:layout_marginTop="15dp"
                android:textSize="25sp"
                android:text="@string/your_name_placeholder"/>

            <TextView
                android:id="@+id/result_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/setting_row"
                android:layout_marginTop="15dp"
                android:textSize="25sp"
                android:text="@string/your_score_placeholder"/>

            <TextView
                android:id="@+id/result_total_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/setting_row"
                android:layout_marginTop="15dp"
                android:textSize="25sp"
                android:text="@string/time_placeholder"/>
        </LinearLayout>
    </LinearLayout>




    <Button
        android:id="@+id/back_to_home_page_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home_page_button_text"
        android:layout_margin="15dp"
        />

    <Button
        android:id="@+id/take_new_quiz"
        android:layout_margin="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/retake_the_quiz_button_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/share_on_twitter_button"
        android:layout_margin="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/share_result_on_twitter_button_text"
        android:background="@drawable/round_blue_see_other_tweets_button"
        android:textColor="@color/white"/>







</androidx.appcompat.widget.LinearLayoutCompat>